<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.sign.in.SignInFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kitsu"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_gmail"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_gmail"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/rounder2"
        android:hint="@string/gmail"
        android:padding="10dp"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/rounder2"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:hint="@string/password"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_gmail" />

    <Button
        android:id="@+id/btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_in"
        android:background="@drawable/rounder2"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="15dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>