<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="130dp"
    android:layout_height="200dp"
    android:layout_margin="7dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/teal_700"
        app:cardCornerRadius="5dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tool:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/anime" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/bottom_shadow"
            android:layout_gravity="bottom"
            android:contentDescription="@string/shadow" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anime_name"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"/>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>